--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body class="font-open-sans">
     <header>
         <nav>
             <div class="logo">
-                <h2>Mary</h2>
+                <h2>Ma<span class="color-orange">r</span>y</h2>
             </div>
-            <ul>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Blog</li>
-                <li><button>Hire Me</button></li>
+
+            <ul class="menu">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
     </header>
